--- a/Source/WPF/MyMoney/Dialogs/CategoryTransferDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CategoryTransferDialog.xaml
@@ -4,7 +4,6 @@
         Title="Category Transfer" Height="242" Width="415"
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        Background="{DynamicResource DialogWindowBackgroundBrush}" 
         WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
     <Grid Margin="10">
         <Grid.RowDefinitions>
@@ -29,8 +28,8 @@
         <TextBox  Grid.Row="3" Grid.Column="1" x:Name="TextBoxAmount" MinWidth="100" Background="LemonChiffon" Margin="2"/>
 
         <StackPanel Grid.Row="5" Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal" Margin="5">
-            <Button Content="_OK" MinHeight="23" Name="ButtonOk" MinWidth="75" Click="buttonOk_Click"/>
-            <Button Content="_Cancel" MinHeight="23" Name="ButtonCacnel" MinWidth="75" Click="buttonCancel_Click" />
+            <Button Content="_OK" Name="ButtonOk" MinWidth="75" Click="buttonOk_Click"/>
+            <Button Content="_Cancel" Name="ButtonCacnel" MinWidth="75" Click="buttonCancel_Click" />
         </StackPanel>
     </Grid>
 </Window>
