--- a/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
@@ -8,10 +8,12 @@
         xmlns:c="clr-namespace:Walkabout.Controls"
         help:HelpService.HelpKeyword="Setup Accounts"
         Title="Account" 
-        MinHeight="320" MaxHeight="600" MinWidth="400"  
+        MinHeight="320"
+        MinWidth="400"  
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        WindowStyle="ToolWindow" SizeToContent="WidthAndHeight"
+        WindowStyle="ToolWindow" 
+        SizeToContent="WidthAndHeight"
         KeyboardNavigation.TabNavigation="Cycle">
     <local:BaseDialog.Resources>
         <DataTemplate x:Key="AccountAliasItemTemplate">
@@ -48,7 +50,7 @@
                 <RowDefinition Height="4*"/>
                 <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="Auto"  />
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
@@ -73,17 +75,17 @@
             <TextBox x:Name="TextBoxName" Grid.Column="2" HorizontalAlignment="Stretch" Text="{Binding Path=Name, Mode=TwoWay}" Grid.ColumnSpan="2" TabIndex="0" TextChanged="OnNameChanged"/>
 
             <TextBlock Text="Account Number:" Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxAccountNumber" Grid.Column="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=AccountId, Mode=TwoWay}" Height="22" TabIndex="1"/>
+            <TextBox x:Name="TextBoxAccountNumber" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Stretch"  Text="{Binding Path=AccountId, Mode=TwoWay}"  TabIndex="1"/>
 
             <TextBlock Text="Onliine Account Id:" Grid.Column="0" Grid.Row="4" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" Height="22" TabIndex="1"
+            <TextBox x:Name="TextBoxOnlineAccountNumber" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="4" HorizontalAlignment="Stretch"  Text="{Binding Path=OfxAccountId, Mode=TwoWay}" TabIndex="2"
                      ToolTip="Use this field if your bank uses a differently formatted string for your online account number"/>
 
             <TextBlock Text="Description:" Grid.Column="0" Grid.Row="6" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxDescription" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" MinHeight="50"  Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15" TabIndex="2"/>
+            <TextBox x:Name="TextBoxDescription" Grid.Column="2" Grid.Row="6" HorizontalAlignment="Stretch" MinHeight="50"  Text="{Binding Path=Description, Mode=TwoWay}" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15" TabIndex="3"/>
 
             <TextBlock Text="Account Type:" Grid.Column="0" Grid.Row="8" HorizontalAlignment="Right" />
-            <ComboBox x:Name="AccountTypeCombo" Grid.Column="2" Grid.Row="8"  Height="23"   Grid.ColumnSpan="2" VerticalAlignment="Top"   Text="{Binding Path=Type, Mode=TwoWay}" TabIndex="3">
+            <ComboBox x:Name="AccountTypeCombo" Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="2" VerticalAlignment="Top"   Text="{Binding Path=Type, Mode=TwoWay}" TabIndex="4">
                 <ComboBoxItem Content="Cash" />
                 <ComboBoxItem Content="Checking" />
                 <ComboBoxItem Content="Credit" />
@@ -94,10 +96,10 @@
                 <ComboBoxItem Content="Asset" />
             </ComboBox>
 
-            <CheckBox x:Name="CheckBoxTaxDeferred" Grid.Column="2" Grid.Row="9" IsChecked="{Binding Path=IsTaxDeferred, Mode=TwoWay}" TabIndex="12" Margin="0,3,0,3">Tax Deferred</CheckBox>
+            <CheckBox x:Name="CheckBoxTaxDeferred" Grid.Column="2" Grid.ColumnSpan="2" Grid.Row="9" IsChecked="{Binding Path=IsTaxDeferred, Mode=TwoWay}" TabIndex="5" Margin="0,3,0,3">Tax Deferred</CheckBox>
 
             <TextBlock Text="Opening Balance:" Grid.Column="0" Grid.Row="10" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxOpeningBalance" Grid.Column="2" Grid.Row="10"  Text="{Binding Path=OpeningBalance, Mode=TwoWay}" Grid.ColumnSpan="2" TabIndex="4"/>
+            <TextBox x:Name="TextBoxOpeningBalance" Grid.Column="2" Grid.Row="10"  Text="{Binding Path=OpeningBalance, Mode=TwoWay}" Grid.ColumnSpan="2" TabIndex="6"/>
 
             <TextBlock Text="Online Account:" Grid.Column="0" Grid.Row="12" HorizontalAlignment="Right" />
             <Grid HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="12" Grid.ColumnSpan="2" >
@@ -106,53 +108,50 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <ComboBox  Name="comboBoxOnlineAccount" HorizontalAlignment="Stretch" Margin="0,0,10,0"
-                           SelectionChanged="OnComboBoxOnlineAccount_SelectionChanged" TabIndex="5"/>
-                <Button Name="buttonOnlineAccountDetails" Grid.Column="1" Click="OnButtonOnlineAccountDetails_Click" TabIndex="6">>></Button>
+                           SelectionChanged="OnComboBoxOnlineAccount_SelectionChanged" TabIndex="7"/>
+                <Button Name="buttonOnlineAccountDetails" Grid.Column="1" Click="OnButtonOnlineAccountDetails_Click" TabIndex="8">>></Button>
             </Grid>
+
             <TextBlock Text="Currency:" Grid.Column="0" Grid.Row="14" HorizontalAlignment="Right" />
-            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="14"  Grid.ColumnSpan="3  ">
-                <ComboBox x:Name="ComboBoxCurrency"  Text="{Binding Path=Currency, Mode=TwoWay}" Height="22" TabIndex="7" Width="60" SelectionChanged="OnCurrencyChanged"/>
-                <TextBlock x:Name="TextRate" VerticalAlignment="Center" Width="150" Padding="2,3" Margin="5,0"  />
-            </StackPanel>
+            <ComboBox x:Name="ComboBoxCurrency"  Grid.Column="2" Grid.Row="14"  Text="{Binding Path=Currency, Mode=TwoWay}"  TabIndex="9" SelectionChanged="OnCurrencyChanged"/>
+            <TextBlock x:Name="TextRate"  Grid.Column="3" Grid.Row="14" VerticalAlignment="Center" Width="Auto" Padding="2,3" Margin="5"  />
 
             <TextBlock Text="Web Site:" Grid.Column="0" Grid.Row="16" HorizontalAlignment="Right" />
-            <Grid  Grid.Column="2" Grid.Row="16" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0,0,7.105427357601E-15">
+            <Grid Grid.Column="2" Grid.Row="16" HorizontalAlignment="Stretch" Grid.ColumnSpan="2" Margin="0,0,0,8">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="TextBoxWebSite" Grid.Column="0" Text="{Binding Path=WebSite, Mode=TwoWay}" TabIndex="8" />
-                <Button x:Name="ButtonGoToWebSite" Grid.Column="1" Margin="8,0,0,0" Grid.ColumnSpan="2" Click="OnButtonGoToWebSite" TabIndex="9">>></Button>
+                <TextBox x:Name="TextBoxWebSite" Grid.Column="0" Text="{Binding Path=WebSite, Mode=TwoWay}" TabIndex="10" />
+                <Button x:Name="ButtonGoToWebSite" Grid.Column="1" Margin="8,0,0,0" Grid.ColumnSpan="2" Click="OnButtonGoToWebSite" TabIndex="11">>></Button>
             </Grid>
-
 
             <TextBlock Text="Aliases:" Grid.Column="0" Grid.Row="18" HorizontalAlignment="Right" />
             <ComboBox  Name="comboBoxAccountAliases" HorizontalAlignment="Stretch" Grid.Row="18" Grid.Column="2" Grid.ColumnSpan="2" IsEditable="True" HorizontalContentAlignment="Stretch"
-                           TabIndex="10" ItemTemplate="{StaticResource AccountAliasItemTemplate}" ItemContainerStyle="{StaticResource ComboBoxStretchStyle}"
+                           TabIndex="12" ItemTemplate="{StaticResource AccountAliasItemTemplate}" ItemContainerStyle="{StaticResource ComboBoxStretchStyle}"
                        KeyDown="OnAccountAliasesKeyDown"/>
 
             <TextBlock Text="Reconcile Warning:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
             <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="20" HorizontalAlignment="Stretch">
-                <TextBox x:Name="TextBoxReconcileWarning" Text="{Binding Path=ReconcileWarning, Mode=TwoWay}" Height="22" Width="50" TabIndex="11"
-                         ToolTip="Enter when you would like to see a warning reminding you to balance this account
-(for example, you might want this to be less than the number of statements kept by your bank)"/>
+                <TextBox x:Name="TextBoxReconcileWarning" Text="{Binding Path=ReconcileWarning, Mode=TwoWay}"  Width="50" TabIndex="13"
+                         ToolTip="Enter when you would like to see a warning reminding you to balance this account (for example, you might want this to be less than the number of statements kept by your bank)"/>
                 <TextBlock Text="months" VerticalAlignment="Center" Margin="10,0,0,0"/>
             </StackPanel>
 
             <TextBlock Text="Include in budget:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="22" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="12" />
+            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="22" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="14" />
 
             <TextBlock Text="Closed:" Grid.Column="0" Grid.Row="24" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="24" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="13" />
+            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="24" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="15" />
 
             <TextBlock Text="Last Download:" Grid.Column="0" Grid.Row="26" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxLastDownload" Text="{Binding Path=LastSyncDate, Mode=TwoWay}" Grid.Column="2" Grid.Row="26" Grid.ColumnSpan="2" />
 
         </Grid>
-        
+
         <StackPanel Margin="0,14,0,0" Orientation="Horizontal" Grid.Column="2" Grid.Row="16" HorizontalAlignment="Right" >
-            <Button x:Name="ButtonOk"  IsDefault="True" Width="72" Height="23" Margin="0,0,0,0" Click="OnButtonOk">OK</Button>
-            <Button x:Name="ButtonCancel" IsCancel="True" Width="72" Height="23" Margin="12,0,0,0" Click="OnCancel">Cancel</Button>
+            <Button x:Name="ButtonOk"  IsDefault="True" Width="72" Margin="0,0,0,0" Click="OnButtonOk">OK</Button>
+            <Button x:Name="ButtonCancel" IsCancel="True" Width="72" Margin="12,0,0,0" Click="OnCancel">Cancel</Button>
         </StackPanel>
 
     </StackPanel>
