--- a/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/BuildingDialog.xaml
@@ -8,8 +8,8 @@
         MinHeight="430" MinWidth="400"  Width="500" 
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        Background="{DynamicResource DialogWindowBackgroundBrush}"  WindowStyle="ToolWindow"  
-        ResizeMode="CanResizeWithGrip" SizeToContent="WidthAndHeight" Height="430">
+        WindowStyle="ToolWindow"
+        ResizeMode="CanResizeWithGrip" SizeToContent="WidthAndHeight" Height="Auto">
 
     <Grid Name="MainDialogSurface" Margin="20,20,20,20" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
         <Grid.RowDefinitions>
@@ -156,8 +156,8 @@
 
 
         <StackPanel Margin="0,14,0,0" Orientation="Horizontal" HorizontalAlignment="Right" Grid.Row="1">
-            <Button IsDefault="True" Width="72" Height="23" Margin="0,0,0,0" Click="ButtonOk">OK</Button>
-            <Button IsCancel="True" Width="72" Height="23" Margin="12,0,0,0">Cancel</Button>
+            <Button IsDefault="True" Width="72" Margin="0,0,0,0" Click="ButtonOk">OK</Button>
+            <Button IsCancel="True" Width="72" Margin="12,0,0,0">Cancel</Button>
         </StackPanel>
 
     </Grid>
