--- a/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CategoryDialog.xaml
@@ -2,14 +2,16 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:Walkabout.Controls"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         Title="Category"  
         ResizeMode="CanResizeWithGrip"
         ShowInTaskbar="False"
         WindowStartupLocation="CenterOwner" 
-        Background="{DynamicResource DialogWindowBackgroundBrush}"  WindowStyle="ToolWindow"
-        SizeToContent="WidthAndHeight" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignHeight="438" d:DesignWidth="412">
-    <Window.Resources>
-    </Window.Resources>
+        WindowStyle="ToolWindow"
+        SizeToContent="WidthAndHeight" 
+        mc:Ignorable="d" 
+        d:DesignHeight="438" d:DesignWidth="412">
 
     <DockPanel>
         <Border Padding="10,10,10,0" DockPanel.Dock="Top">
@@ -76,7 +78,7 @@
                 
                 <!-- Type -->
                 <Label Grid.Column="0" Grid.Row="2"  HorizontalAlignment="Right">_Type:</Label>
-                <local:ComboBox2 MinWidth="100" Height="23" x:Name="comboBoxType" Grid.Column="1" Grid.Row="2" SelectionChanged="comboBoxType_SelectionChanged" />
+                <local:ComboBox2 MinWidth="100" x:Name="comboBoxType" Grid.Column="1" Grid.Row="2" SelectionChanged="comboBoxType_SelectionChanged" />
 
                 <Label Grid.Column="2" Grid.Row="2" >Color:</Label>
                 <local:DropDownButton Width="50" Height="24" VerticalAlignment="Center" Grid.Column="3" Grid.Row="2" x:Name="ColorDropDown">
@@ -94,7 +96,7 @@
 
                 <local:FilteringComboBox  x:Name="comboTaxCategory" Grid.Column="1" Grid.Row="4" Grid.ColumnSpan="1"
                         ItemContainerStyle="{StaticResource ComboBoxItemTaxCategory}"
-                        FilterChanged="ComboBoxForTaxCategory_FilterChanged" Padding="0" MaxDropDownHeight="450" Height="23"
+                        FilterChanged="ComboBoxForTaxCategory_FilterChanged" Padding="0" MaxDropDownHeight="450"
                         IsEditable="True" StaysOpenOnEdit="True" IsTextSearchCaseSensitive="False">
                     <ComboBox.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -120,7 +122,7 @@
 
                 <Label Grid.Column="2" Grid.Row="8" Grid.ColumnSpan="3">from</Label>
 
-                <local:ComboBox2 x:Name="PastRange" Grid.Row="8" Grid.Column="3" Height="23" SelectedIndex="0" SelectionChanged="PastRange_SelectionChanged">
+                <local:ComboBox2 x:Name="PastRange" Grid.Row="8" Grid.Column="3" SelectedIndex="0" SelectionChanged="PastRange_SelectionChanged">
                     
                 </local:ComboBox2>
                 
@@ -135,15 +137,8 @@
 
         <!-- OK or Cancel -->
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" DockPanel.Dock="Bottom" Margin="10,0,10,10">
-            <StackPanel.Resources>
-                <Style TargetType="{x:Type Button}">
-                    <Setter Property="Width" Value="70" />
-                    <Setter Property="Height" Value="25" />
-                    <Setter Property="Margin" Value="3,0,3,0" />
-                </Style>
-            </StackPanel.Resources>
-            <Button Name="okButton" IsDefault="True">OK</Button>
-            <Button Name="cancelButton" IsCancel="True">Cancel</Button>
+            <Button Name="okButton" Width="72" Margin="12,0,0,0" IsDefault="True">OK</Button>
+            <Button Name="cancelButton" Width="72" Margin="12,0,0,0" IsCancel="True">Cancel</Button>
         </StackPanel>
 
     </DockPanel>
