--- a/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CreateDatabaseDialog.xaml
@@ -31,11 +31,11 @@
 
                 <TextBlock x:Name="TextBlockSqliteBackupPrompt" Text="Backup file:" Grid.Row="1" Margin="5,4" />
                 <TextBox x:Name="TextBoxSqliteBackup" Background="#80FFFFC0" Margin="2" TextChanged="TextBoxSqliteBackup_TextChanged" Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"/>
-                <Button x:Name="ButtonSqliteBrowseBackup" Grid.Column="3" MinWidth="31" MinHeight="23" Click="ButtonSqliteBrowseBackup_Click"  Grid.Row="1">...</Button>
+                <Button x:Name="ButtonSqliteBrowseBackup" Grid.Column="3" MinWidth="31" Click="ButtonSqliteBrowseBackup_Click"  Grid.Row="1">...</Button>
 
                 <TextBlock Text="SQL Lite file:" Margin="5,2" Grid.Row="2" />
                 <TextBox Background="#80FFFFC0" x:Name="TextBoxSqliteDatabaseFile"  Grid.Row="2" Grid.Column="1" Margin="2" TextChanged="TextBoxSqliteDatabaseFile_TextChanged" Grid.ColumnSpan="2"/>
-                <Button x:Name="ButtonSqliteBrowse" Click="ButtonSqliteBrowse_Click" Grid.Column="3"  Grid.Row="2" MinWidth="31" MinHeight="23">...</Button>
+                <Button x:Name="ButtonSqliteBrowse" Click="ButtonSqliteBrowse_Click" Grid.Column="3"  Grid.Row="2" MinWidth="31">...</Button>
 
                 <TextBlock Text="Password:" Margin="5,2" Grid.Row="3" />
                 <c:PasswordControl  Background="#80FFFFC0" x:Name="TextBoxSqlitePassword"  Grid.Row="3" Grid.Column="1" Margin="2" Grid.ColumnSpan="2"
@@ -51,9 +51,9 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Button x:Name="ButtonOpen" Grid.Column="0" IsDefault="True" MinWidth="80" MinHeight="23" Margin="3" Click="ButtonOpen_Click" Visibility="Hidden">_Open</Button>
-            <Button x:Name="ButtonCreate" Grid.Column="2" IsDefault="True" MinWidth="80" MinHeight="23" Margin="3" Click="ButtonCreate_Click">C_reate</Button>
-            <Button x:Name="ButtonCancel" Grid.Column="3" IsCancel="True" MinWidth="80" MinHeight="23" Margin="3">_Cancel</Button>
+            <Button x:Name="ButtonOpen" Grid.Column="0" IsDefault="True" MinWidth="80"  Margin="3" Click="ButtonOpen_Click" Visibility="Hidden">_Open</Button>
+            <Button x:Name="ButtonCreate" Grid.Column="2" IsDefault="True" MinWidth="80"  Margin="3" Click="ButtonCreate_Click">C_reate</Button>
+            <Button x:Name="ButtonCancel" Grid.Column="3" IsCancel="True" MinWidth="80" Margin="3">_Cancel</Button>
         </Grid>
 
     </Grid>
