--- a/Source/WPF/MyMoney/Dialogs/LoanDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/LoanDialog.xaml
@@ -9,7 +9,6 @@
         MinHeight="320" MaxHeight="500" MinWidth="400"  
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        Background="{DynamicResource DialogWindowBackgroundBrush}"
         WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
 
     <StackPanel Margin="20,20,20,20">
@@ -112,8 +111,8 @@
         </Grid>
 
         <StackPanel Margin="0,14,0,0" Orientation="Horizontal" Grid.Column="2" Grid.Row="16" HorizontalAlignment="Right" >
-            <Button IsDefault="True" Width="72" Height="23" Margin="0,0,0,0" Click="ButtonOk">OK</Button>
-            <Button IsCancel="True" Width="72" Height="23" Margin="12,0,0,0" Click="OnCancel">Cancel</Button>
+            <Button IsDefault="True" Width="72" Margin="0,0,0,0" Click="ButtonOk">OK</Button>
+            <Button IsCancel="True" Width="72" Margin="12,0,0,0" Click="OnCancel">Cancel</Button>
         </StackPanel>
 
     </StackPanel>
