Fix build (have to remove strong naming because ModernWPF is not strongly named). Added local Dark/Light.xaml for any extra colors that we need that are not provided by ModernWPF. Fixed TrendGraph so it uses these new colors.

--- a/Source/WPF/MyMoney/Controls/TrendGraph.xaml
+++ b/Source/WPF/MyMoney/Controls/TrendGraph.xaml
@@ -19,7 +19,6 @@
         <CommandBinding Command="cmd:AppCommands.CommandAddSeries" Executed="OnAddSeries"  CanExecute="CanExecute_AddSeries"/>
         <CommandBinding Command="cmd:AppCommands.CommandRemoveSeries" Executed="OnRemoveSeries" CanExecute="CanExecute_RemoveSeries" />
         <CommandBinding Command="cmd:AppCommands.CommandExportData" Executed="OnExportData" CanExecute="CanExecute_ExportData" />
-        
     </UserControl.CommandBindings>
     <UserControl.InputBindings>
         <KeyBinding Command="cmd:AppCommands.CommandNext" Key="F2" Modifiers="Control"/>
@@ -46,6 +45,7 @@
         </ContextMenu>
     </UserControl.ContextMenu>
     <Grid>
-        <c:AreaChart x:Name="Chart" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  />
+        <c:AreaChart x:Name="Chart" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
+                     />
     </Grid>
 </UserControl>
