--- a/Source/WPF/MyMoney/Dialogs/CategoryTransferDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/CategoryTransferDialog.xaml
@@ -1,10 +1,14 @@
-﻿<Window x:Class="Walkabout.Dialogs.CategoryTransferDialog"
+﻿<Window 
+        x:Class="Walkabout.Dialogs.CategoryTransferDialog"
+        xmlns:local="clr-namespace:Walkabout.Dialogs"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Category Transfer" Height="242" Width="415"
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
+        WindowStyle="ToolWindow"
+        SizeToContent="WidthAndHeight">
+    
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
