--- a/Source/WPF/MyMoney/Dialogs/FreeStyleQueryDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/FreeStyleQueryDialog.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="Walkabout.Dialogs.FreeStyleQueryDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Free style query" Height="400" Width="600" WindowStyle="ToolWindow" ShowInTaskbar="False"
+        Title="Free style query"
+        Height="400" 
+        Width="600" 
+        WindowStyle="ToolWindow" 
+        ShowInTaskbar="False"
         ResizeMode="CanResizeWithGrip"  >
     
     <Grid >
