--- a/Source/WPF/MyMoney/Dialogs/LoanDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/LoanDialog.xaml
@@ -1,15 +1,19 @@
-﻿<Window x:Class="Walkabout.Dialogs.LoanDialog"
+﻿<local:BaseDialog  
+        x:Class="Walkabout.Dialogs.LoanDialog"
+        xmlns:local="clr-namespace:Walkabout.Dialogs"
+        xmlns:dialog="clr-namespace:Walkabout.Dialogs"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:controls="clr-namespace:Walkabout.Controls"
-        xmlns:dialog="clr-namespace:Walkabout.Dialogs"
         Title="Loan" 
-        MinHeight="320" MaxHeight="500" MinWidth="400"  
+        MinHeight="320"
+        MinWidth="400"  
         ShowInTaskbar="False"  
         WindowStartupLocation="CenterOwner" 
-        WindowStyle="ToolWindow" SizeToContent="WidthAndHeight">
+        WindowStyle="ToolWindow" 
+        SizeToContent="WidthAndHeight">
 
     <StackPanel Margin="20,20,20,20">
         <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -116,4 +120,4 @@
         </StackPanel>
 
     </StackPanel>
-</Window>
+</local:BaseDialog>
