--- a/Source/WPF/MyMoney/Dialogs/SampleDatabaseOptions.xaml
+++ b/Source/WPF/MyMoney/Dialogs/SampleDatabaseOptions.xaml
@@ -1,10 +1,16 @@
-﻿<local:BaseDialog x:Class="Walkabout.Dialogs.SampleDatabaseOptions"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Sample Database Options" Height="260" Width="422" ShowInTaskbar="False" WindowStyle="ToolWindow" Loaded="Window_Loaded"
-        xmlns:local="clr-namespace:Walkabout.Dialogs"
-        xmlns:help="clr-namespace:Walkabout.Help"
-        help:HelpService.HelpKeyword="Sample Data" >
+﻿<local:BaseDialog 
+    x:Class="Walkabout.Dialogs.SampleDatabaseOptions"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:local="clr-namespace:Walkabout.Dialogs"
+    xmlns:help="clr-namespace:Walkabout.Help"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    Title="Sample Database Options"
+    Height="260" Width="422" 
+    ShowInTaskbar="False" 
+    WindowStyle="ToolWindow" 
+    Loaded="Window_Loaded"
+    help:HelpService.HelpKeyword="Sample Data" 
+    >
     <Window.Resources>
         <Style x:Key="TextPromptStyle" TargetType="{x:Type TextBlock}">
             <Setter Property="HorizontalAlignment" Value="Right"/>
