--- a/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
@@ -1,11 +1,15 @@
-﻿<Window x:Class="Walkabout.Dialogs.StockQuoteServiceDialog"
+﻿<local:BaseDialog 
+        x:Class="Walkabout.Dialogs.StockQuoteServiceDialog"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         mc:Ignorable="d" SizeToContent="WidthAndHeight"
-        Title="Stock Quote Service Dialog" >
+        Title="Stock Quote Service Dialog"
+        ShowInTaskbar="False"  
+        WindowStartupLocation="CenterOwner" 
+        WindowStyle="ToolWindow" >
     <Grid>
         <Grid Margin="20">
             <Grid.ColumnDefinitions>
@@ -54,4 +58,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</local:BaseDialog>
