A tool for finding unused resources...

--- a/Source/WPF/MyMoney/Controls/RoundedButton.xaml
+++ b/Source/WPF/MyMoney/Controls/RoundedButton.xaml
@@ -5,8 +5,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              Background="{DynamicResource ButtonNormalBackground}" 
-             BorderBrush="{DynamicResource ButtoNormalBorder}" 
-             Foreground="{DynamicResource ButtoNormalForeground}" 
+             BorderBrush="{DynamicResource ButtonNormalBorder}" 
+             Foreground="{DynamicResource ButtonNormalForeground}" 
              MousePressedBackground="{DynamicResource ButtonMousePressedBackground}" 
              MousePressedBorder="{DynamicResource ButtonMousePressedBorder}" 
              MousePressedForeground="{DynamicResource ButtonMousePressedForeground}" 
